Addded getting batch data utilizing redis then firestore
